FEATURE: UI   | Added option for "Open Containing Folder" menu action - which may integrate better with non-standard file browsers [amc1]
FEATURE: UI   | Added option for "Show Torrent Menu" -- Users can now decide to see the Torrent menu in the menubar or not [knguyen]
FEATURE: UIv3 | New menu configuration for Vuze and Vuze Advanced UI's [knguyen]

CHANGE: Core  | Further memory footprint reductions; for additional tweaks see http://www.azureuswiki.com/index.php/Reduce_memory_usage [The 8472]
CHANGE: Core  | Reimplemented LT extension protocol code [amc1]
CHANGE: Core  | DND/Compact (aka Delete) priority now deletes all files that do not share pieces with normal/high priority files [The 8472]
CHANGE: Core  | Queuing rules now don't start any further torrents if the global up/download speed limits are reached [The 8472]
                 - makes "don't count torrent ..." minimum speed rules more useful to dynamically regulate the queue lengths
                 - recovers faster from chain reactions in case of connection loss
CHANGE: Core  | Made the crypto handshake a bit less predictable [The 8472]
CHANGE: Core  | Added support for udp-multiscrapes [The 8472]
CHANGE: Core  | Added support for plugins which implement mainline DHT [amc1]

BUGFIX: Core  | Request limiting/Priorities no longer pinch off LAN peers if seperate LAN speeds are enabled [The 8472]                 
BUGFIX: UI    | Shells no longer use the low-res frog icon, the normal main window icon is now used instead [amc1]
BUGFIX: UI    | Limiting comments in General View to 5k characters under WinXP to avoid crashes due to faulty comctl32.dll [The 8472]
BUGFIX: UI    | Setting speed parameters manually now disables autospeed [The 8472]



2007.12.21 | Azureus Vuze 3.0.4.2

FEATURE: UI   | Added "Check Files Exist" menu option [amc1]
FEATURE: Plug | Perform low resource usage tracking of online torrents for swarm cross-population purposes [Parg]
